syntax = "proto3";

option java_package = "com.mrsep.musicrecognizer.core.datastore";
option java_multiple_files = true;

message AcrCloudConfigProto {
    string host = 1;
    string access_key = 2;
    string access_secret = 3;
}