syntax = "proto3";

option java_package = "com.mrsep.musicrecognizer.core.datastore";
option java_multiple_files = true;

enum AudioCaptureModeProto {
    Unspecified = 0;
    Microphone = 1;
    Device = 2;
    Auto = 3;
}