syntax = "proto3";

option java_package = "com.mrsep.musicrecognizer.core.datastore";
option java_multiple_files = true;

enum RecognitionProviderProto {
    Audd = 0;
    AcrCloud = 1;
}