syntax = "proto3";

import "music_service_proto.proto";
import "acr_cloud_config_proto.proto";
import "recognition_provider_proto.proto";
import "audio_capture_mode_proto.proto";

option java_package = "com.mrsep.musicrecognizer.core.datastore";
option java_multiple_files = true;

// initially, an inconvenient numbering and nesting were chosen,
// it might be worth considering a migration

message UserPreferencesProto {

  reserved 32, 13;

  bool onboarding_completed = 1;
  string api_token = 2;

  message DeprecatedRequiredServicesProto {
    bool spotify = 3;
    bool youtube = 4;
    bool soundcloud = 5;
    bool apple_music = 6;
    bool deezer = 7;
    bool napster = 8;
    bool musicbrainz = 9;
  }

  DeprecatedRequiredServicesProto deprecated_required_services = 10;

  bool notification_service_enabled = 11;
  bool dynamic_colors_enabled = 12;

  enum FallbackActionProto {
    IGNORE = 0;
    SAVE = 1;
    SAVE_AND_LAUNCH = 2;
  }

  message FallbackPolicyProto {
    FallbackActionProto no_matches = 14;
    FallbackActionProto bad_connection = 15;
    FallbackActionProto another_failure = 16;
  }

  FallbackPolicyProto fallback_policy = 17;

  enum FontSizeProto {
    SMALL = 0;
    NORMAL = 1;
    LARGE = 2;
    HUGE = 3;
  }

  message LyricsStyleProto {
    FontSizeProto font_size = 18;
    bool is_bold = 19;
    bool is_high_contrast = 20;
    bool align_to_start = 42;
  }

  LyricsStyleProto lyrics_style = 21;

  enum FavoritesModeProto {
    ALL = 0;
    ONLY_FAVORITES = 1;
    EXCLUDE_FAVORITES = 2;
  }

  enum SortByProto {
    RECOGNITION_DATE = 0;
    TITLE = 1;
    ARTIST = 2;
    RELEASE_DATE = 3;
  }

  enum OrderByProto {
    ASC = 0;
    DESC = 1;
  }

  message TrackFilterProto {
    FavoritesModeProto favorites_mode = 22;
    SortByProto sort_by = 23;
    OrderByProto order_by = 24;
    int64 startDate = 25;
    int64 endDate = 26;
  }

  TrackFilterProto track_filter = 27;

  bool artwork_based_theme_enabled = 28;

  message HapticFeedbackProto {
    bool vibrate_on_tap = 29;
    bool vibrate_on_result = 30;
  }

  HapticFeedbackProto haptic_feedback = 31;

  enum ThemeModeProto {
    FOLLOW_SYSTEM = 0;
    ALWAYS_LIGHT = 1;
    ALWAYS_DARK = 2;
  }

  ThemeModeProto theme_mode = 33;
  bool use_pure_black_for_dark_theme = 34;

  repeated MusicServiceProto required_music_services = 35;
  bool has_done_required_music_services_migration = 36;

  bool recognizeOnStartup = 37;

  AcrCloudConfigProto acr_cloud_config = 38;

  RecognitionProviderProto current_recognition_provider = 39;

  bool use_grid_for_library = 40;
  bool use_grid_for_recognition_queue = 41;

  bool show_recognition_date_in_library = 43;
  bool show_creation_date_in_queue = 44;

  AudioCaptureModeProto default_audio_capture_mode = 45;
  AudioCaptureModeProto main_button_long_press_audio_capture_mode = 46;

  optional bool use_alt_device_sound_source = 47;

  // NEXT AVAILABLE ID: 48

}